Potentially fixed misalignment issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -180,45 +180,46 @@ nav {
 /*Playing Card Divs */
 
 .cards {
-    cursor: pointer;
+    cursor: grab;
     transform-style: preserve-3d;
-    transform-origin: center right;
-    transform-style: preserve-3d;
-    transform-origin: center right;
+    transform-origin: 7.5vw 0 0 !important;
     transition: transform 1s;
 
 }
 
 .card-is-flipped {
-    transform: rotateY(-180deg) translateX(-100%);
+    transform: rotateY(180deg) scaleX(-1);
+    transform-origin: 7.5vw 0 0 !important;
 
 }
 
 .card-is-flipped-start {
-    transform: rotateY(180deg) translateX(100%);
-
+  /* transform: rotateY(180deg) translateX(-100%); */
+    
 }
 
 .card-face--back {
-    transform: rotateY(-180deg) translateX(100%);
+   /* transform: rotateY(-180deg) translateX(100%); */
     transition: transform 0.5s;
 
     background-image: url(images/playing-card-rear.png) !important;
 }
 
 .card-face--back-start {
-    transform: rotateY(180deg) translateX(100%);
+   /* transform: rotateY(180deg) translateX(100%); */
     transition: transform 0.5s;
 
     background-image: url(images/playing-card-rear.png) !important;
 }
 
-
+/*
 .card.visible .card-back {
     transform: rotateY(-180deg);
 }
+*/
 .card-is-not-flipped{
-    
+   /* transform: rotateY(-180deg) translateX(100%); */
+    transition: transform 0.5s;
 }
 
 #hearts {
@@ -991,7 +992,7 @@ nav {
         margin-left: 21vw;
     }
 }
-
+/*
 @media screen and (min-width: 1500px) {
     .card-is-flipped {
         transform: rotateY(-180deg) translateX(-107%);
@@ -1094,7 +1095,7 @@ nav {
         background-image: url(images/playing-card-rear.png) !important;
     }
 }
-
+*/
 @media only screen and (max-width: 800px) {
 
 
@@ -1341,7 +1342,7 @@ nav {
         font-size: 2.3vw !important;
     }
 }
-
+/*
 @media screen and (min-width: 1569px){
     
     #cards-container{
@@ -1355,4 +1356,4 @@ nav {
     }
 
    
-}
+} 
